[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scripts/Chuck a luck.gd" type="Script" id=1]
[ext_resource path="res://Game Scenes/All Scenes/Go Back.tscn" type="PackedScene" id=2]
[ext_resource path="res://Game Scenes/All Scenes/Money.tscn" type="PackedScene" id=3]

[node name="Chuck a luck" type="Node2D"]
script = ExtResource( 1 )

[node name="Control" type="Control" parent="."]
margin_right = 1027.0
margin_bottom = 599.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Control"]
margin_right = 1030.0
margin_bottom = 602.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dice" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_right = 1030.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Dice1" type="Sprite" parent="Control/VBoxContainer/Dice"]
position = Vector2( 182.832, 163.227 )
scale = Vector2( 5.7877, 4.77976 )

[node name="Dice2" type="Sprite" parent="Control/VBoxContainer/Dice"]
position = Vector2( 848.633, 163.81 )
scale = Vector2( 5.96409, 4.72937 )

[node name="Dice3" type="Sprite" parent="Control/VBoxContainer/Dice"]
position = Vector2( 502.253, 169.154 )
scale = Vector2( 5.96409, 4.72937 )

[node name="Bets" type="HBoxContainer" parent="Control/VBoxContainer"]
margin_top = 303.0
margin_right = 1030.0
margin_bottom = 602.0
size_flags_vertical = 3

[node name="text" type="VBoxContainer" parent="Control/VBoxContainer/Bets"]
margin_right = 513.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="dice_roll_pred" type="Label" parent="Control/VBoxContainer/Bets/text"]
margin_right = 513.0
margin_bottom = 14.0
text = "Dice roll prediction:"

[node name="HBoxContainer" type="HBoxContainer" parent="Control/VBoxContainer/Bets/text"]
margin_top = 18.0
margin_right = 513.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="one_pred" type="Button" parent="Control/VBoxContainer/Bets/text/HBoxContainer"]
margin_right = 82.0
margin_bottom = 281.0
size_flags_horizontal = 3
text = "1"

[node name="two_pred" type="Button" parent="Control/VBoxContainer/Bets/text/HBoxContainer"]
margin_left = 86.0
margin_right = 168.0
margin_bottom = 281.0
size_flags_horizontal = 3
text = "2"

[node name="three_pred" type="Button" parent="Control/VBoxContainer/Bets/text/HBoxContainer"]
margin_left = 172.0
margin_right = 254.0
margin_bottom = 281.0
size_flags_horizontal = 3
text = "3"

[node name="four_pred" type="Button" parent="Control/VBoxContainer/Bets/text/HBoxContainer"]
margin_left = 258.0
margin_right = 340.0
margin_bottom = 281.0
size_flags_horizontal = 3
text = "4"

[node name="five_pred" type="Button" parent="Control/VBoxContainer/Bets/text/HBoxContainer"]
margin_left = 344.0
margin_right = 426.0
margin_bottom = 281.0
size_flags_horizontal = 3
text = "5"

[node name="six_pred" type="Button" parent="Control/VBoxContainer/Bets/text/HBoxContainer"]
margin_left = 430.0
margin_right = 513.0
margin_bottom = 281.0
size_flags_horizontal = 3
text = "6"

[node name="HBoxContainer2" type="HBoxContainer" parent="Control/VBoxContainer/Bets"]
margin_left = 517.0
margin_right = 1030.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="Control/VBoxContainer/Bets/HBoxContainer2"]
margin_right = 513.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="payout" type="Label" parent="Control/VBoxContainer/Bets/HBoxContainer2/VBoxContainer"]
margin_right = 513.0
margin_bottom = 91.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Payout:"
align = 1
valign = 1

[node name="bet" type="Label" parent="Control/VBoxContainer/Bets/HBoxContainer2/VBoxContainer"]
margin_top = 95.0
margin_right = 513.0
margin_bottom = 109.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "bet:"
align = 1
valign = 1

[node name="TextEdit" type="TextEdit" parent="Control/VBoxContainer/Bets/HBoxContainer2/VBoxContainer"]
margin_top = 113.0
margin_right = 513.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Button" type="Button" parent="Control/VBoxContainer/Bets/HBoxContainer2/VBoxContainer"]
margin_top = 208.0
margin_right = 513.0
margin_bottom = 299.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Roll!"

[node name="Go Back" parent="Control" instance=ExtResource( 2 )]
margin_right = 64.0

[node name="Money" parent="Control" instance=ExtResource( 3 )]
margin_left = 905.0
margin_right = 1019.0

[connection signal="pressed" from="Control/VBoxContainer/Bets/text/HBoxContainer/one_pred" to="." method="_on_one_pred_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Bets/text/HBoxContainer/two_pred" to="." method="_on_two_pred_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Bets/text/HBoxContainer/three_pred" to="." method="_on_three_pred_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Bets/text/HBoxContainer/four_pred" to="." method="_on_four_pred_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Bets/text/HBoxContainer/five_pred" to="." method="_on_five_pred_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Bets/text/HBoxContainer/six_pred" to="." method="_on_six_pred_pressed"]
[connection signal="pressed" from="Control/VBoxContainer/Bets/HBoxContainer2/VBoxContainer/Button" to="." method="_on_Button_pressed"]
